--- a/surfit/vc8/globe.vcproj
+++ b/surfit/vc8/globe.vcproj
@@ -48,7 +48,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;../../libs\zlib123-dll\include\&quot;;../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="&quot;../../libs\zlib123-dll\include\&quot;;../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0;_HAS_ITERATOR_DEBUGGING=0;_SCL_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -78,11 +78,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83d.lib zdll.lib"
+				AdditionalDependencies="tcl84g.lib zdll.lib"
 				OutputFile="../bin/libglobe.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\libs\ZLIB123-DLL\LIB,..\..\LIBS\TCL8.3.5\WIN\DEBUG"
+				AdditionalLibraryDirectories="&quot;..\..\libs\ZLIB123-DLL\LIB&quot;;..\..\LIBS\TCL8.4.15\WIN\DEBUG_VC8"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
 				GenerateMapFile="true"
@@ -154,7 +154,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="&quot;../../libs\zlib123-dll\include\&quot;;../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="&quot;../../libs\zlib123-dll\include\&quot;;../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -184,11 +184,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib zdll.lib"
+				AdditionalDependencies="tcl84.lib zdll.lib"
 				OutputFile="../bin/libglobe.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE,..\..\libs\zlib123-dll\lib\"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8,..\..\libs\zlib123-dll\lib\"
 				ProgramDatabaseFile=".\../Release/libglobe.pdb"
 				ImportLibrary="../bin/libglobe.lib"
 				TargetMachine="1"
@@ -253,7 +253,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -I../../ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DBOOST_ALL_DYN_LINK -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Ic:\boost /EHsc /EHs /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4244 /wd4267 /wd4311 /wd4800 /wd4101 /wd4307 /wd4003 -DSTXXL_VERBOSE_LEVEL=1"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.4.15/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;XXL;_CRT_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -286,7 +286,7 @@
 				OutputFile="../bin/libglobe.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\libs\ZLIB123-DLL\LIB,..\..\LIBS\TCL8.3.5\WIN\DEBUG;..\..\libs\stxxl\lib80_dbg;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\libs\ZLIB123-DLL\LIB,..\..\LIBS\tcl8.4.15\WIN\DEBUG;..\..\libs\stxxl\lib80_dbg;..\..\libs\boost\lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\../Debug/libglobe.pdb"
 				ImportLibrary="../bin/libglobe.lib"
@@ -353,7 +353,7 @@
 				AdditionalOptions="/Gs /Gs  -DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -I../../ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DBOOST_ALL_DYN_LINK -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Ic:\boost /EHsc /EHs /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4244 /wd4267 /wd4311 /wd4800 /wd4101 /wd4307 /wd4003 -DSTXXL_VERBOSE_LEVEL=0"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;;&quot;../../libs\zlib123-dll\include\&quot;"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.4.15/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;;&quot;../../libs\zlib123-dll\include\&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XXL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -383,11 +383,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib zdll.lib"
+				AdditionalDependencies="tcl84.lib zdll.lib"
 				OutputFile="../bin/libglobe.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE,..\..\libs\zlib123-dll\lib\;..\..\libs\stxxl\lib80;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8,..\..\libs\zlib123-dll\lib\;..\..\libs\stxxl\lib80;..\..\libs\boost\lib"
 				ProgramDatabaseFile=".\../Release/libglobe.pdb"
 				ImportLibrary="../bin/libglobe.lib"
 				TargetMachine="1"
@@ -456,7 +456,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="&quot;../../libs\zlib123-dll\include\&quot;;../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="&quot;../../libs\zlib123-dll\include\&quot;;../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -487,11 +487,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib zdll.lib"
+				AdditionalDependencies="tcl84.lib zdll.lib"
 				OutputFile="../bin/libglobe.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE,..\..\libs\zlib123-dll\lib\"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8,..\..\libs\zlib123-dll\lib\"
 				ProgramDatabaseFile=".\../Release/libglobe.pdb"
 				ImportLibrary="../bin/libglobe.lib"
 				TargetMachine="1"
@@ -560,7 +560,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="&quot;../../libs\zlib123-dll\include\&quot;;../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="&quot;../../libs\zlib123-dll\include\&quot;;../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -591,11 +591,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib zdll.lib"
+				AdditionalDependencies="tcl84.lib zdll.lib"
 				OutputFile="../bin/libglobe.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE,..\..\libs\zlib123-dll\lib\"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8,..\..\libs\zlib123-dll\lib\"
 				ProgramDatabaseFile=".\../Release/libglobe.pdb"
 				ImportLibrary="../bin/libglobe.lib"
 				TargetMachine="1"
