--- a/surfit/vc8/sstuff.vcproj
+++ b/surfit/vc8/sstuff.vcproj
@@ -48,7 +48,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0;_HAS_ITERATOR_DEBUGGING=0;_SCL_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -77,11 +77,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83d.lib"
+				AdditionalDependencies="tcl84g.lib"
 				OutputFile="../bin/libsstuff.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\DEBUG"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\DEBUG_VC8"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
 				MapFileName=".\../Debug/libsstuff.map"
@@ -153,7 +153,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../sstuff/src;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="../sstuff/src;../src/sstuff/ptypes;../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -184,11 +184,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib"
+				AdditionalDependencies="tcl84.lib"
 				OutputFile="../bin/libsstuff.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8"
 				ProgramDatabaseFile=".\../Release/libsstuff.pdb"
 				ImportLibrary="../bin/libsstuff.lib"
 				TargetMachine="1"
@@ -253,7 +253,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -I../../ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DBOOST_ALL_DYN_LINK -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -I..\..\libs\boost /EHsc /EHs /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4244 /wd4267 /wd4311 /wd4800 /wd4101 /wd4307 /wd4003 -DSTXXL_VERBOSE_LEVEL=1"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.4.15/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;XXL;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				GeneratePreprocessedFile="0"
 				BasicRuntimeChecks="3"
@@ -291,7 +291,7 @@
 				OutputFile="../bin/libsstuff.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\DEBUG;..\..\libs\stxxl\lib80_dbg;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\LIBS\tcl8.4.15\WIN\DEBUG;..\..\libs\stxxl\lib80_dbg;..\..\libs\boost\lib"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
 				MapFileName=".\../Debug/libsstuff.map"
@@ -362,7 +362,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../sstuff/src;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
+				AdditionalIncludeDirectories="../sstuff/src;../src/sstuff/ptypes;../../libs/tcl8.4.15/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XXL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -391,11 +391,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib"
+				AdditionalDependencies="tcl84.lib"
 				OutputFile="../bin/libsstuff.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE;..\..\libs\stxxl\lib80;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8;..\..\libs\stxxl\lib80;..\..\libs\boost\lib"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
 				ProgramDatabaseFile=".\../Release/libsstuff.pdb"
@@ -467,7 +467,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../sstuff/src;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="../sstuff/src;../src/sstuff/ptypes;../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -499,11 +499,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib"
+				AdditionalDependencies="tcl84.lib"
 				OutputFile="../bin/libsstuff.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8"
 				GenerateDebugInformation="false"
 				ProgramDatabaseFile=".\../Release/libsstuff.pdb"
 				ImportLibrary="..\bin\libsstuff.lib"
@@ -574,7 +574,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../sstuff/src;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="../sstuff/src;../src/sstuff/ptypes;../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -605,11 +605,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib"
+				AdditionalDependencies="tcl84.lib"
 				OutputFile="../bin/libsstuff.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8"
 				ProgramDatabaseFile=".\../Release_SSE/libsstuff.pdb"
 				ImportLibrary="..\bin\libsstuff.lib"
 				TargetMachine="1"
