--- a/surfit/vc8/surfit_cmd.vcproj
+++ b/surfit/vc8/surfit_cmd.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -64,10 +64,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83d.lib"
+				AdditionalDependencies="tcl84g.lib"
 				OutputFile="../bin/surfit.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\DEBUG"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\DEBUG_VC8"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -122,7 +122,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="../../libs/tcl8.3.5/generic"
+				AdditionalIncludeDirectories="../../libs/tcl8.4.15/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -144,10 +144,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib"
+				AdditionalDependencies="tcl84.lib"
 				OutputFile="../bin/surfit.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
