--- a/surfit/vc8/surfit_io.vcproj
+++ b/surfit/vc8/surfit_io.vcproj
@@ -53,7 +53,7 @@
 				FavorSizeOrSpeed="1"
 				EnableFiberSafeOptimizations="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.4.15/generic;..\..\libs\NETCDF\LIBSRC"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -83,11 +83,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib zdll.lib netcdf.lib libjpeg.lib"
+				AdditionalDependencies="tcl84.lib zdll.lib netcdf.lib libjpeg.lib"
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;&quot;..\..\libs\zlib123-dll\lib\&quot;;..\..\libs\netcdf\libsrc\;..\..\LIBS\TCL8.3.5\WIN\RELEASE"
+				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;&quot;..\..\libs\zlib123-dll\lib\&quot;;..\..\libs\netcdf\libsrc\;..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8"
 				IgnoreDefaultLibraryNames="LIBC.lib"
 				ProgramDatabaseFile=".\../Release/libsurfit_io.pdb"
 				ImportLibrary="../bin/libsurfit_io.lib"
@@ -152,7 +152,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\LIBS\JPEG-6B&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\LIBS\JPEG-6B&quot;;../../libs/tcl8.4.15/generic;..\..\libs\NETCDF\LIBSRC"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0;_HAS_ITERATOR_DEBUGGING=0;_SCL_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -182,11 +182,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83d.lib netcdf.lib libjpeg.lib"
+				AdditionalDependencies="tcl84g.lib netcdf.lib libjpeg.lib"
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,..\..\libs\NETCDF\LIBSRC,..\..\LIBS\TCL8.3.5\WIN\DEBUG,..\..\libs\jpeg-6b\"
+				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;..\..\libs\NETCDF\LIBSRC;..\..\LIBS\TCL8.4.15\WIN\DEBUG_VC8;&quot;..\..\libs\jpeg-6b\&quot;"
 				IgnoreDefaultLibraryNames="LIBC,MSVCRT"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
@@ -253,7 +253,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -I../../ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DBOOST_ALL_DYN_LINK -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Ic:\boost /EHsc /EHs /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4244 /wd4267 /wd4311 /wd4800 /wd4101 /wd4307 /wd4003 -DSTXXL_VERBOSE_LEVEL=1"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\LIBS\JPEG-6B&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\LIBS\JPEG-6B&quot;;../../libs/tcl8.4.15/generic;..\..\libs\NETCDF\LIBSRC;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;XXL;_CRT_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -286,7 +286,7 @@
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,..\..\libs\NETCDF\LIBSRC,..\..\LIBS\TCL8.3.5\WIN\DEBUG,..\..\libs\jpeg-6b\;..\..\libs\stxxl\lib80_dbg;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,..\..\libs\NETCDF\LIBSRC,..\..\LIBS\tcl8.4.15\WIN\DEBUG,..\..\libs\jpeg-6b\;..\..\libs\stxxl\lib80_dbg;..\..\libs\boost\lib"
 				IgnoreDefaultLibraryNames="LIBC"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\../Debug/libsurfit_io.pdb"
@@ -354,7 +354,7 @@
 				AdditionalOptions="/Gs /Gs  -DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -I../../ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DBOOST_ALL_DYN_LINK -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Ic:\boost /EHsc /EHs /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4244 /wd4267 /wd4311 /wd4800 /wd4101 /wd4307 /wd4003 -DSTXXL_VERBOSE_LEVEL=0"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.4.15/generic;..\..\libs\NETCDF\LIBSRC;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XXL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -384,11 +384,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib zdll.lib netcdf.lib libjpeg.lib"
+				AdditionalDependencies="tcl84.lib zdll.lib netcdf.lib libjpeg.lib"
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;&quot;..\..\libs\zlib123-dll\lib\&quot;;..\..\libs\netcdf\libsrc\;..\..\libs\stxxl\lib80;..\..\libs\boost\lib;..\..\LIBS\TCL8.3.5\WIN\RELEASE"
+				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;&quot;..\..\libs\zlib123-dll\lib\&quot;;..\..\libs\netcdf\libsrc\;..\..\libs\stxxl\lib80;..\..\libs\boost\lib;..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit_io.pdb"
 				ImportLibrary="../bin/libsurfit_io.lib"
@@ -458,7 +458,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.4.15/generic;..\..\libs\NETCDF\LIBSRC"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -489,11 +489,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib zdll.lib netcdf.lib libjpeg.lib"
+				AdditionalDependencies="tcl84.lib zdll.lib netcdf.lib libjpeg.lib"
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;&quot;..\..\libs\zlib123-dll\lib\&quot;;..\..\libs\netcdf\libsrc\;..\..\LIBS\TCL8.3.5\WIN\RELEASE"
+				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;&quot;..\..\libs\zlib123-dll\lib\&quot;;..\..\libs\netcdf\libsrc\;..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit_io.pdb"
@@ -564,7 +564,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.4.15/generic;..\..\libs\NETCDF\LIBSRC"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -595,11 +595,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="tcl83.lib zdll.lib netcdf.lib libjpeg.lib"
+				AdditionalDependencies="tcl84.lib zdll.lib netcdf.lib libjpeg.lib"
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;&quot;..\..\libs\zlib123-dll\lib\&quot;;..\..\libs\netcdf\libsrc\;..\..\LIBS\TCL8.3.5\WIN\RELEASE"
+				AdditionalLibraryDirectories="&quot;..\..\libs\jpeg-6b&quot;;&quot;..\..\libs\zlib123-dll\lib\&quot;;..\..\libs\netcdf\libsrc\;..\..\LIBS\TCL8.4.15\WIN\RELEASE_VC8"
 				IgnoreDefaultLibraryNames="LIBC.lib"
 				ProgramDatabaseFile=".\../Release/libsurfit_io.pdb"
 				ImportLibrary="../bin/libsurfit_io.lib"
