--- a/surfit/src/doc/surfit.cfg
+++ b/surfit/src/doc/surfit.cfg
@@ -82,7 +82,7 @@ WARN_LOGFILE           = surfit.log
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = groups.doc ../sstuff ../surfit 
+INPUT                  = groups.doc ../sstuff ../surfit ../surfit_io
 #../surfit ../freeflow ../globe ../surfit_io
 FILE_PATTERNS          = *.doc \
                          *.h
@@ -91,7 +91,7 @@ EXCLUDE                = ../sstuff/ptypes ../sstuff/.svn \
 			 ../surfit/.svn ../surfit/creeps ../surfit/ptypes \
 			 ../surfit/shapelib
 EXCLUDE_SYMLINKS       = NO
-EXCLUDE_PATTERNS       = *_tcl.h *_tcl.cpp triangle.h
+EXCLUDE_PATTERNS       = *_tcl.h *_tcl.cpp triangle.h EasyBMP* shapefil.h
 EXAMPLE_PATH           = 
 EXAMPLE_PATTERNS       = *.tcl
 EXAMPLE_RECURSIVE      = YES
