--- a/surfit/src/doc/surfit.cfg
+++ b/surfit/src/doc/surfit.cfg
@@ -82,8 +82,8 @@ WARN_LOGFILE           = surfit.log
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = groups.doc ../sstuff ../surfit ../surfit_io
-#../surfit ../freeflow ../globe ../surfit_io
+INPUT                  = groups.doc ../sstuff ../surfit ../surfit_io ../globe 
+# ../freeflow 
 FILE_PATTERNS          = *.doc \
                          *.h
 RECURSIVE              = YES
@@ -91,7 +91,8 @@ EXCLUDE                = ../sstuff/ptypes ../sstuff/.svn \
 			 ../surfit/.svn ../surfit/creeps ../surfit/ptypes \
 			 ../surfit/shapelib
 EXCLUDE_SYMLINKS       = NO
-EXCLUDE_PATTERNS       = *_tcl.h *_tcl.cpp triangle.h EasyBMP* shapefil.h
+EXCLUDE_PATTERNS       = *_tcl.h *_tcl.cpp triangle.h EasyBMP* shapefil.h ioapi.h \
+			 unzip.h
 EXAMPLE_PATH           = 
 EXAMPLE_PATTERNS       = *.tcl
 EXAMPLE_RECURSIVE      = YES
