git-svn-id: svn://localhost/trunk@1241 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/debian/rules
+++ b/surfit/debian/rules
@@ -36,7 +36,7 @@ build-stamp:  config.status
 	dh_testdir
 
 	# Add here commands to compile the package.
-	$(MAKE)
+	$(MAKE) > make.log
 	#docbook-to-man debian/surfit.sgml > surfit.1
 
 	touch $@
@@ -47,7 +47,7 @@ clean:
 	rm -f build-stamp 
 
 	# Add here commands to clean up after the build process.
-	-$(MAKE) distclean
+	-$(MAKE) clean
 ifneq "$(wildcard /usr/share/misc/config.sub)" ""
 	cp -f /usr/share/misc/config.sub config.sub
 endif
