--- a/surfit/debian/control
+++ b/surfit/debian/control
@@ -1,5 +1,5 @@
 Source: surfit
-Section: unknown
+Section: math,science,graphics 
 Priority: extra
 Maintainer: Mikhail Dmitrievsky <mdmitr@gmail.com>
 Build-Depends: debhelper (>= 5), zlib1g-dev, netcdfg-dev, tcl8.4-dev, libjpeg-dev, autotools-dev
