git-svn-id: svn://localhost/trunk@1243 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/debian/control
+++ b/surfit/debian/control
@@ -1,5 +1,5 @@
 Source: surfit
-Section: math,science,graphics 
+Section: math 
 Priority: extra
 Maintainer: Mikhail Dmitrievsky <mdmitr@gmail.com>
 Build-Depends: debhelper (>= 5), zlib1g-dev, netcdfg-dev, tcl8.4-dev, libjpeg-dev, autotools-dev
