--- a/surfit/debian/control
+++ b/surfit/debian/control
@@ -8,5 +8,10 @@ Standards-Version: 3.7.2
 Package: surfit
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: opensource gridding and contouring software
+surfit is an open source and free gridding and contouring
+software. surfit can do interpolation/approximation of points, 
+contours and surfaces, can take fault lines and trend surfaces 
+into account, can use inequalities and other conditions.
+Supports a lot of data types and formats.
+
