upgrading docs for doxygen 1.8.5

--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -230,7 +230,7 @@ DISTRIBUTE_GROUP_DOC   = NO
 # NO to prevent subgrouping. Alternatively, this can be done per class using 
 # the \nosubgrouping command.
 
-SUBGROUPING            = YES
+SUBGROUPING            = NO
 
 #---------------------------------------------------------------------------
 # Build related configuration options
