--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -487,6 +487,7 @@ INPUT                  = src/install.doc \
                          src/groups.doc \
                          src/groups_globe.doc \
                          src/groups_freeflow.doc \
+                         src/data_priority.doc \
                          src/datatypes.doc \
                          src/datatypes_globe.doc \
                          src/solvers.doc \
