Trying to build under Ubuntu

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 2.8)
 
 include(CheckIncludeFile)
 
@@ -7,7 +7,7 @@ project(surfit)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 # Widgets finds its own dependencies.
-find_package(Tcl REQUIRED)
+find_package(TCL REQUIRED)
 
 find_package(zlib)
 
@@ -26,6 +26,7 @@ endif()
 set(VERSION "3.1")
 CHECK_INCLUDE_FILE(string.h  HAVE_STRING_H)
 CHECK_INCLUDE_FILE(stdlib.h  HAVE_STDLIB_H)
+CHECK_INCLUDE_FILE(unistd.h  HAVE_UNISTD_H)
 
 configure_file(config.h.in config.h)
 
