--- a/src/surfit/CMakeLists.txt
+++ b/src/surfit/CMakeLists.txt
@@ -25,3 +25,7 @@ target_link_libraries(${PROJ_NAME}
 	libsstuff
 )
 
+set_target_properties( ${PROJ_NAME} PROPERTIES PREFIX "" )
+
+install(TARGETS ${PROJ_NAME} DESTINATION lib)
+
