--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,4 +1,5 @@
 #cmakedefine HAVE_STRING_H
 #cmakedefine HAVE_STDLIB_H
 #cmakedefine HAVE_UNISTD_H
+#cmakedefine HAVE_LIBJPEG
 #cmakedefine VERSION "@VERSION@"
