creating of necessary folder added

--- a/src/tclsurfit/CMakeLists.txt
+++ b/src/tclsurfit/CMakeLists.txt
@@ -1,5 +1,6 @@
-PROJECT(libtclsurfit)
-SET(MODULE_NAME libtclsurfit)
+SET(PROJ_NAME libtclsurfit)
+PROJECT(${PROJ_NAME})
+SET(MODULE_NAME ${PROJ_NAME})
 SET(INTERFACE_FILES src/surfit.i)
 
 INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
@@ -7,8 +8,12 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ../sstuff/src ../sstuff/src/ptyp
 
 SET(CMAKE_SWIG_FLAGS "-c++")
 
+FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/tclsurfit/src)
+
 SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILES} PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILES} PROPERTIES CMAKE_SWIG_FLAGS "-includeall")
+
+SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR})
 
 SWIG_ADD_MODULE(${MODULE_NAME} tcl ${INTERFACE_FILES})
 SWIG_LINK_LIBRARIES(${MODULE_NAME} ${TCL_LIBRARY} libsstuff libsurfit)
@@ -19,4 +24,4 @@ set_target_properties( ${PROJ_NAME} PROPERTIES PREFIX "" )
 # Install section
 #
 
-install(TARGETS libtclsurfit DESTINATION lib)
+install(TARGETS ${PROJ_NAME} DESTINATION lib)
